# libIME2

./: CMakePresets.json  README.md  build.bat
src/: CMakeLists.txt  ImeModule.h  LangBarButton.cpp  LangBarButton.h  TextService.cpp  TextService.h
